--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,9 @@ axum = { version = "0.6.20", features = [
 axum-extra = { version = "0.8.0", features = ["cookie"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
 clap = { version = "4.4.8", features = ["derive"] }
+dashmap = "5.5.3"
 futures = "0.3.29"
+llm-sdk = "0.3.0"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
