--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ tower-http = { version = "0.4.4", features = [
 ] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+uuid = { version = "1.5.0", features = ["v4", "serde"] }
