--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,8 +24,9 @@ futures = "0.3.29"
 llm-sdk = "0.3.0"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
+strum = { version = "0.25.0", features = ["derive"] }
 tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
-tokio-stream = "0.1.14"
+tokio-stream = { version = "0.1.14", features = ["sync"] }
 tower-http = { version = "0.4.4", features = [
   "compression-full",
   "cors",
