--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ axum = { version = "0.6.20", features = [
 ] }
 axum-extra = { version = "0.8.0", features = ["cookie"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
+chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.8", features = ["derive"] }
 dashmap = "5.5.3"
 futures = "0.3.29"
