--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,14 @@ axum = { version = "0.6.20", features = [
 ] }
 axum-extra = { version = "0.8.0", features = ["cookie"] }
 axum-server = { version = "0.5.1", features = ["tls-rustls"] }
+base64 = "0.21.5"
 chrono = { version = "0.4.31", features = ["serde"] }
 clap = { version = "4.4.8", features = ["derive"] }
+comrak = { version = "0.19.0", default-features = false, features = ["syntect"] }
 dashmap = "5.5.3"
 futures = "0.3.29"
 llm-sdk = "0.3.0"
+schemars = "0.8.16"
 serde = { version = "1.0.192", features = ["derive"] }
 serde_json = "1.0.108"
 strum = { version = "0.25.0", features = ["derive"] }
